<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/tvAccountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAccountInfo"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSave"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tvAccountInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvAccountInfo"
        android:padding="20dp"/>

    <View
        android:id="@+id/vLineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvAccountInfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:autofillHints="name"
        android:background="@drawable/custom_edt"
        android:hint="@string/edtName"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:textColorHint="@color/primary_color"
        android:textSize="18sp"
        android:drawableStart="@drawable/baseline_info_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLineBottom"/>
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/edEmail"
        app:layout_constraintTop_toBottomOf="@id/edName"
        android:background="@drawable/custom_edt"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textColorHint="@color/primary_color"
        android:autofillHints="Email"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_email_24"/>
    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/edtUserName"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        android:background="@drawable/custom_edt"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textColorHint="@color/primary_color"
        android:autofillHints="username"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_account_box_24"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edUserName"
        android:background="@drawable/custom_edt"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textColorHint="@color/primary_color"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_key_24"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/custom_edt"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/rbMale"
                android:buttonTint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:paddingStart="5dp"/>
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/rbFemale"
                android:buttonTint="@color/primary_color"
                android:textColor="@color/primary_color"/>
        </LinearLayout>
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>