<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/glLine"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
        android:padding="20dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:hint="@string/edEmail"
        android:autofillHints="emailAddress"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edt"
        android:textColorHint="@color/primary_color"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        android:padding="20dp"
        android:inputType="text"
        android:textSize="18sp"
        android:hint="@string/edtUserName"
        android:autofillHints="username"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edt"
        android:textColorHint="@color/primary_color"
        android:drawableStart="@drawable/baseline_account_box_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edUserName"
        android:padding="20dp"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/edtPassword"
        android:autofillHints="password"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edt"
        android:textColorHint="@color/primary_color"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        android:padding="20dp"
        android:textSize="18sp"
        android:hint="@string/edConfirmPassword"
        android:autofillHints="confirm Password"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edt"
        android:textColorHint="@color/primary_color"
        android:drawableStart="@drawable/baseline_account_box_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btnLogin"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/edConfirmPassword"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:background="@color/color_Do_Dam"
        android:textStyle="bold"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btnCancel"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:background="@color/color_Do_Dam"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>